# AutoPas

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .lsanIgnoreList.txt  .remarkrc.yaml  AutoPas.h  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE  README  README.md  absolute_site_profiler.py  bench.sh  bench_num.sh  clang-tidy.cmake  cmake-format.py  doxygen.cmake  dummyFile  errors.txt  failedTestInfo  format-all-CMakeLists.sh  run_alpha_gamma.sh  run_alpha_gamma_cluster_1.cmd  run_alpha_gamma_cluster_10.cmd  run_alpha_gamma_cluster_11.cmd  run_alpha_gamma_cluster_2.cmd  run_alpha_gamma_cluster_3.cmd  run_alpha_gamma_cluster_4.cmd  run_alpha_gamma_cluster_5.cmd  run_alpha_gamma_cluster_6.cmd  run_alpha_gamma_cluster_7.cmd  run_alpha_gamma_cluster_8.cmd  run_alpha_gamma_cluster_9.cmd  run_once.cmd  run_spinodal.cmd  (+2 more)
applicationLibrary/: CMakeLists.txt  Doxyfile.in  demLibTests.cpp  mdLibTests.cpp  sphLibTests.cpp
applicationLibrary/molecularDynamicsLibrary/: LJFunctor.h  LJFunctorAVX.h  LJFunctorSVE.h  LJMultisiteFunctor.h  MoleculeLJ.h  MultisiteMoleculeLJ.h  ParticlePropertiesLibrary.h
benchmarks/: CMakeLists.txt  LJFunctorHWYBench.cpp
example/CMakeProject/: CMakeLists.txt
examples/: CMakeLists.txt  performance_collection.ods
examples/basic/: CMakeLists.txt  main.cpp  makefile
examples/basic-cuda/: CMakeLists.txt  main.cpp  main.cu
examples/benchmark-cuda/: CMakeLists.txt  main.cpp
examples/cluster-test/: CMakeLists.txt  cluster-test.cpp
examples/fmm/: AdaptiveOctree.cpp  AdaptiveOctree.h  AdaptiveOctreeNode.cpp  AdaptiveOctreeNode.h  CMakeLists.txt  FmmParticle.h  Math3D.cpp  Math3D.h  NearFieldFunctor.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  Operators.cpp  Operators.h  main.cpp
examples/fmm-integration-test/: CMakeLists.txt  main.cpp
examples/kokkos-test/: CMakeLists.txt  MDFlexParser.h  main.cpp
examples/lj-traversals/: CMakeLists.txt  lj-traversals.cpp
examples/md/: CMakeLists.txt  makefile  md-main.cpp  mdutils.h  measurePerf.sh  performance_collection.ods  plotMeasurements.gp
examples/md-flexible/: BoundaryConditions.h  CMakeLists.txt  Checkpoint.h  DefaultConfig.yaml  Doxyfile.in  FullparsingFile.yaml  Generator.cpp  Generator.h  LJFunctorMixing.h  MDFlexParser.cpp  MDFlexParser.h  MDFlexParserInclude.h  MolSimBlatt2Task3.yaml  Objects.h  ParticleClassLibrary.cpp  ParticleClassLibrary.h  PrintableMolecule.cpp  PrintableMolecule.h  README.md  Simulation.cpp  Simulation.h  SpinodalDecompositionE.yaml  StrainStressTest_p_0d001.yaml  StrainStressTest_p_0d05.yaml  Thermostat.h  TimeDiscretization.h  YamlParser.cpp  YamlParser.h  main.cpp  measurePerf.sh  parsingFile.yaml  plotScript.gp  plotStrongscaling.gp  strongscaling.sh
examples/md-flexible-tuner/: CMakeLists.txt
examples/md-julia/: CMakeLists.txt
examples/ml-files/: fdeep_model.json  ml.config
examples/sph/: CMakeLists.txt  SPHCalcDensityFunctor.cpp  SPHCalcDensityFunctor.h  SPHCalcDensityFuntor.cpp  SPHCalcDensityFuntor.h  SPHCalcHydroForceFunctor.cpp  SPHCalcHydroForceFunctor.h  SPHKernels.cpp  SPHKernels.h  SPHParticle.cpp  SPHParticle.h  sph-main.cpp
examples/sph-mpi/: CMakeLists.txt  sph-main-mpi.cpp
examples/sph-traversals/: CMakeLists.txt  sph-traversals.cpp
examples/sph-verlet/: CMakeLists.txt  README  sph-main-verlet.cpp
examples/sphDiagramGeneration/: CMakeLists.txt  measurePerf.sh  sph-diagram-generation.cpp
libs/: CMakeLists.txt
libs/ALL/: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  cmake-variants.json  make_release.sh
libs/fake-dlclose/: CMakeLists.txt  README.md  fake-dlclose.c
libs/flop-routines/: CMakeLists.txt
libs/getopt-windows/: CMakeLists.txt  getopt.c  getopt.h
libs/harmony/: CHANGELOG  Makefile  README
libs/patches/: patch-file-pmt-for-autopas.patch  patch-file-treelite-for-autopas.patch
libs/pmt/: .cmake-format.py  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.dev.md  README.md
libs/spdlog-0.16.3/: CMakeLists.txt  README.md
likwid/: CMakeLists.txt  LikwidImpl.h
powersensor2/: CMakeLists.txt
src/: ALL.cpp  ALL_fortran.cpp  AutoPas.h  CMakeLists.txt  autopas.h  autopasIncludes.h  hplugin.c  hrange.c  hrange.h  namespaces.h  newBranch.txt  session-core.c  session-core.h
src/autopas/: AutoPas.h  AutoPasDecl.h  AutoPasImpl.h  CMakeLists.txt  InstanceCounter.h  LogicHandler.h  LogicHandlerInfo.cpp  LogicHandlerInfo.h  NoTemplateInterface.h  Version.h.in  autopasIncludes.h  namespaces.h
src/cells/: FullParticleCell.h  ParticleCell.h  RMMParticleCell.h  RMMParticleCell2T.h
src/containers/: CellBlock3D.h  CellBoarderAndFlagManager.h  CellBorderAndFlagManager.h  Direct.h  DirectSum.h  LinkedCells.h  ParticleContainer.h  ParticleContainerInterface.h  VerletListHelpers.h  VerletLists.h
src/iterators/: ParticleIterator.h  ParticleIteratorInterface.h  ParticleIteratorWrapper.h  RegionParticleIterator.h  SingleCellIterator.h  SingleCellIteratorInterface.h  SingleCellIteratorWrapper.h
src/pairwiseFunctors/: CellFunctor.h  FlopCounterFunctor.h  Functor.h  LJFunctor.cpp  LJFunctor.h
src/particles/: MoleculeLJ.cpp  MoleculeLJ.h  Particle.h  SPHParticle.cpp  SPHParticle.h
src/selectors/: AutoTuner.h  ContainerSelector.h  TraversalSelector.h
src/sph/: SPHCalcDensityFunctor.cpp  SPHCalcDensityFunctor.h  SPHCalcHydroForceFunctor.cpp  SPHCalcHydroForceFunctor.h  SPHKernels.cpp  SPHKernels.h  SPHParticle.cpp  SPHParticle.h  autopassph.h
src/utils/: AlignedAllocator.h  ArrayMath.h  ExceptionHandler.cpp  ExceptionHandler.h  Logger.cpp  Logger.h  SoA.h  SoAStorage.h  SoAType.h  StaticSelectorMacros.h  ThreeDimensionalMapping.h  Timer.cpp  Timer.h  WrapOpenMP.h  arrayMath.h  inBox.h
tests/: CMakeLists.txt  allTests.cpp  makefile
tests/MPIParallelAutoPasTests/: AutoPasMPITestBase.h  CMakeLists.txt  allTests.cpp
tests/feature/: TestCompare.c
tests/testAutopas/: AoSvsSoATest.cpp  AoSvsSoATest.h  AutoPasTest.h  (+76 more)
tools/: CMakeLists.txt  CycleCounterQuery.cpp
tuningLogToSQL/: CMakeLists.txt  LogToSQLiteWriter.h  main.cpp
(+10833 files in other folders)
